<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_icon_back"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_bg_color"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="64dip"
        android:layout_height="@dimen/title_height"
        android:src="@drawable/arrow_title_left"
        android:background="@null"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="18dip" />
    
    <Button
        android:id="@+id/btn_back_new"
        android:layout_width="80dip"
        android:gravity="center"
        android:layout_height="@dimen/title_height"
        android:text="@string/cancel"
        android:background="@drawable/selector_button_click"
        android:textColor="@color/selector_color_title_press"
        android:visibility="gone"
        android:textSize="18dip" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="6dip"
        android:ellipsize="end"
        android:gravity="center"
        android:maxWidth="180dip"
        android:singleLine="true"
        android:text="@string/add_item"
        android:textColor="@android:color/white"
        android:textSize="20dip" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="64dip"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_button_click"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/selector_color_title_press"
        android:textSize="18dip"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/layout_progress_load"
        android:layout_width="64dip"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_progress_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@anim/anim_load_manage" />
    </LinearLayout>

</RelativeLayout>