<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        layout="@layout/title_reg_step1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="vertical"
            android:padding="10dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="0dp"
                    android:layout_height="48dip"
                    android:layout_weight="1"
                    android:background="@drawable/selector_input_reg"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/phonenum"
                    android:inputType="number"
                    android:maxLength="13" />

                <Button
                    android:layout_width="104dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/selector_button_click"
                    android:paddingLeft="14dip"
                    android:paddingRight="14dip"
                    android:singleLine="true"
                    android:text="@string/get_security_code"
                    android:textSize="14sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="48dip"
                    android:layout_weight="1"
                    android:background="@drawable/selector_input_reg"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/note_security_code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="18dip"/>

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="154dip"
                    android:layout_height="44dip"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/selector_main_reds"
                    android:paddingLeft="14dip"
                    android:paddingRight="14dip"
                    android:singleLine="true"
                    android:text="@string/get_security_code"
                    android:textColor="@color/selector_color_title_press"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="48dip"
                    android:layout_weight="1"
                    android:background="@drawable/selector_input_reg"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="设置密码 6-10位"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:textSize="18sp"/>

                <Button
                    android:layout_width="104dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/selector_button_click"
                    android:paddingLeft="14dip"
                    android:paddingRight="14dip"
                    android:singleLine="true"
                    android:text="@string/get_security_code"
                    android:textSize="14dip"
                    android:visibility="invisible" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/selector_main_reds"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:singleLine="true"
                android:text="下一步"
                android:textColor="@color/selector_color_title_press"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center_vertical"
                    android:text="@string/click_ok"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center_vertical"
                    android:text="@string/use_protocol"
                    android:textColor="@color/selector_color_protocol"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_haiwaitips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/haiwaiTips"
                android:textColor="@color/selector_color_protocol"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>